gettext-macros/tests/ui/dgettext/invalid_ref_to_positional_arg.rs
use gettext_macros::*;

fn main() {
    dgettext!("domainname", "{0}");
    dgettext!("domainname", "{}{1}", 1);
    dgettext!("domainname", "{}{}{2}", 1, 2);
}
